Static "index.ts" excavated from the generated "bundle" folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-/dist/
-/bundle/purs.js
-/bower_components/
-/node_modules/
-/.pulp-cache/
-/output/
-/generated-docs/
+.DS_Store
 /.psc-package/
-/.psc*
-/.purs*
-/.psa*
-/.spago
-index.js
+/.psci_modules/
+/.spago/
+/bundle/
+/dist/
+/generated-docs/
+/node_modules/
+/output/
