--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "check-format": "purs-tidy check \"src/**/*.purs\"",
+    "format": "purs-tidy format-in-place \"src/**/*.purs\"",
+    "prebuild": "npm run check-format",
+    "build": "spago build",
+    "pretest": "npm run build",
+    "test": "echo \"WARNING: No tests available.\" && exit 1",
+    "prebundle": "npm run build",
+    "bundle": "esbuild ./output/Main/index.js --bundle --platform=browser --format=esm --external:@emurgo/cardano-serialization-lib-browser --outfile=bundle/purs.js",
+    "predist": "npm run bundle",
+    "dist": "webpack --mode=production --node-env=production",
+    "preserve": "npm run dist",
+    "serve": "webpack serve",
+    "clean": "rm -r output/Frontend.* output/Main/ bundle/ dist/ 2> /dev/null"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
